<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8f5e9"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".5"
        android:text="@string/title"
        android:textColor="#2e7d32"
        android:textIsSelectable="false"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        style="@style/Button"
        android:text="@string/button" />

    <Button
        android:id="@+id/button2"
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button4"
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button6"
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:text="@string/button6" />
</LinearLayout>
